--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,13 @@
 
     <link rel="icon" href="icon.png" />
 
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
 
     <title>Autosurance</title>
   </head>
